# sirocco

./: CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
config/: sirocco.yml.example
sirocco/: main.py
sirocco/controllers/: base.py
sirocco/core/: exc.py
tests/: test_sirocco.py
